--- a/src/styles/reader.css
+++ b/src/styles/reader.css
@@ -1,59 +1,14 @@
-#reader-wrap {
-    display: flex;
-    width: 100%;
-    height: 90vh;
-    overflow-y: scroll;
-}
-
-#main-article {
-    width: 70%;
-    overflow-y: auto;
-    padding: 16px;
-}
-
-#main-article .prose{
-    max-width: 100%;
-}
-
-#sidebar {
-    width: 30%;
-    overflow-y: auto;
-    padding: 16px;
-    background-color: #f0f0f0;
-    /* Add a background color if needed */
-}
-
-#sidebar ol {
-    padding-inline-start: 10px;
-}
-
-#definition-container {
-    max-height: calc(100vh - 200px);
-    /* Adjust this value as needed */
-    overflow-y: auto;
-}
-
-.highlight {
-    background: lightgreen;
-    cursor: pointer;
-}
-
-.speaker-btn, .translate-icon {
-    cursor: pointer;
-}
-
-/* Override the default border-bottom width for tbody tr */
-#reader-wrap .prose :where(tbody tr):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+#main-article .prose :where(tbody tr):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
     border-bottom-width: 0px !important; 
     border-bottom-color: var(--tw-prose-td-borders);
 }
 
-#reader-wrap .prose-lg :where(tbody td, tfoot td):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+#main-article .prose-lg :where(tbody td, tfoot td):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
     padding-top: 0.3em;
     padding-bottom: 0.3em;
 }
 
-#reader-wrap .prose-lg :where(p):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+#main-article .prose-lg :where(p):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
     margin-top: 0.3em;
     margin-bottom: 0.3em;
-}
+} 
